Update README
Removed 'Getting Started' section and 'Activity Levels' table from README.